ISSUE-464 fix Error DriverTimeoutException when maven test distributed-smtp-integration-tests (#471)